automatic preparation of dataset to bench, for now, only watdiv